<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity">

    <include layout="@layout/header"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingHorizontal="16sp"
        android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/aplikasi_konversi"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/tanggal"
        android:paddingVertical="10sp"
        android:paddingHorizontal="20sp"
        android:background="@color/corporateBlue"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/ke_format_lain"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/pilih_tanggal" />

    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/ke_format_lain"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/tanggal_yang_dipilih"
        android:textColor="@color/grey"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/conversionResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/ke_format_lain"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/ke_format_lain"
        android:textColor="@color/grey"
        android:textSize="18sp"/>
    </LinearLayout>


    <!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="15sp"-->
<!--        android:layout_weight="1"-->
<!--        android:text="@string/calculate_your"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold" />-->

</LinearLayout>